<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout style="@style/Sample.ScrollContent">
        <Button
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_out_button"
            />
        <TextView
            android:id="@+id/user_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/initial_state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_state_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/initial_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/final_state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_state_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/final_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </LinearLayout>
</ScrollView>
